can't get the widget working, worked on settings

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,8 +32,12 @@ lifecycleLivedataKtx = "2.8.4"
 runtimeLivedata = "1.6.8"
 androidbrowserhelper = "2.5.0"
 glanceAppwidget = "1.1.0"
+glance = "1.1.0-beta02"
 
 [libraries]
+#noinspection SimilarGradleDependency
+glance-appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "glance" }
+glance-material = { group = "androidx.glance", name = "glance-material3", version.ref = "glance" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCamera2" }
